--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.login-input-container, .signup-input-container {
-    width: 350px;
+.border-webkit {
+    -webkit-text-stroke: 1px #ff52d9;
+    font-family: Verdana,Arial,"Liberation Sans","Bitstream Vera",Geneva,Helvetica,sans-serif;
 }
